--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
+            <a class="nav-link" href="/post">Sample Post</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
