--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
  {% block body %}
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/contact-bg.jpg')">
+  <header class="masthead" style="background-image: 
+  url('{{url_for('static',filename='img/contact-bg.jpg')}}  ')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
