--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Clean Blog</h1>
-            <span class="subheading">A Blog Theme by Start Bootstrap</span>
+            <h1>ICT LEARNER</h1>
+            <span class="subheading"> BY MILTON</span>
           </div>
         </div>
       </div>
