--- a/templates/post.html
+++ b/templates/post.html
@@ -2,9 +2,9 @@
  {% block body %}
 
   <!-- Page Header -->
-  {% set image_name='img/' + post.image  %}
+  
   <header class="masthead" style="background-image: 
-  url(' {{url_for('static',filename=image_name)}}  ')">
+  url(' {{url_for('static',filename='img/'+post.image)}}  ')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
