--- a/templates/login.html
+++ b/templates/login.html
@@ -17,8 +17,8 @@
     <form class="form-signin" action="/dashboard" method="POST">
   
   <h1 class="h3 mb-3 font-weight-normal">Admin log in</h1>
-  <label for="inputEmail" class="sr-only">Email address</label>
-  <input type="email" id="inputEmail" name="user_name" class="form-control" placeholder="Email address" required autofocus>
+  <label for="inputEmail" class="sr-only">Admin name</label>
+  <input type="text" id="inputEmail" name="user_name" class="form-control" placeholder="Admin name" required autofocus>
   <label for="inputPassword" class="sr-only">Password</label>
   <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
   <div class="checkbox mb-3">
@@ -26,7 +26,7 @@
       <input type="checkbox" name="remember_me" value="remember-me"> Remember me
     </label>
   </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
   <p class="mt-5 mb-3 text-muted">&copy; {{pass_param['blog_logo']}} 2017-2020</p>
 </form>
 </body>
