--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -8,8 +8,8 @@
      <div class="row">
        <div class="col-lg-8 col-md-10 mx-auto">
          <div class="page-heading">
-           <h1>Welcome</h1>
-           <span class="subheading">Admin panel</span>
+           <h1>Admin Panel</h1>
+           <span class="subheading">Manage your posts and change theme</span>
          </div>
        </div>
      </div>
@@ -20,8 +20,37 @@
  <div class="container">
    <div class="row">
      <div class="col-lg-8 col-md-10 mx-auto">
-      
-      
+      <div class="uploader-file">
+             <h3>Upload a file</h3>
+            
+      </div>
+        
+    <h2 class="text-success">Edit Posts</h2>          
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Serial</th>
+        <th>Post Title</th>
+        <th>Post Date</th>
+        <th>Edit</th>
+        <th>Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+     {% for row in posts %} 
+      <tr>
+        <td>{{ row.id }}</td>
+        <td>{{ row.title}}</td>
+        <td>{{ row.date}}</td>
+        <td><button class="btn btn-primary">Edit</button></td>
+        <td><button class="btn btn-danger">Delete</button></td>
+
+      </tr>
+      {% endfor %} 
+
+    </tbody>
+  </table>
+
       
      </div>
    </div>
