insert posts into the database

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -20,11 +20,9 @@
  <div class="container">
    <div class="row">
      <div class="col-lg-8 col-md-10 mx-auto">
-      <div class="uploader-file">
-             <h3>Upload a file</h3>
-            
-      </div>
-        
+      
+      <a href="/insert" class="btn btn btn-secondary">Add Post</a>
+      
     <h2 class="text-success">Edit Posts</h2>          
   <table class="table table-striped">
     <thead>
