--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -46,7 +46,7 @@
         <td>{{ row.title}}</td>
         <td>{{ row.date}}</td>
         <td><a href="/edit/{{row.id}}"><button class="btn btn-primary">Edit</button></a></td>
-        <td><button class="btn btn-danger">Delete</button></td>
+        <td> <a href="/delete/{{row.id}}"> <button class="btn btn-danger">Delete</button></a></td>
 
       </tr>
       {% endfor %} 
