pagination making code added

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,8 @@
         {% endfor %}
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+          <a class="btn btn-primary float-left" href="{{prev}}">  &larr; Previous</a>
+          <a class="btn btn-primary float-right" href="{{next}}">Next &rarr;</a>
         </div>
       </div>
     </div>
